# Silent-Talk

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: evaluation.py  infer.py  routes.py  upload.py
backend/models/: __init__.py  baseline.py  decoder.py
backend/preprocessing/: __init__.py  dataset.py  roi_extractor.py  segmenter.py
backend/routers/: inference.py  ws.py
backend/schemas/: models.py
backend/services/: file_cleaner.py  inference_service.py  job_manager.py  stream_buffer.py  ws_handler.py
configs/: data.yaml  model.yaml  vocab_ko_mvp.json
data/: __init__.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  constants.js  webcamUtils.js
frontend/src/components/: CaptionPanel.jsx  WebcamView.jsx
frontend/src/hooks/: useLipStream.js
models/: __init__.py  ctc_decoder.py  lipnet.py
scripts/: evaluate.py  export_onnx.py  extract_lip_rois.py  train.py
